--- a/dream-album/src/main/resources/conf/dev/dream_album_db.properties
+++ b/dream-album/src/main/resources/conf/dev/dream_album_db.properties
@@ -1,4 +1,4 @@
-datasource.dream.album.jdbc.url=jdbc:mysql://127.0.0.1:3306/dream?characterEncoding=utf-8&autoReconnect=true&maxReconnects=1&initialTimeout=0&failOverReadOnly=false&zeroDateTimeBehavior=convertToNull&connectTimeout=500&socketTimeout=5000
+datasource.dream.album.jdbc.url=jdbc:mysql://127.0.0.1:3306/dream_album?characterEncoding=utf-8&autoReconnect=true&maxReconnects=1&initialTimeout=0&failOverReadOnly=false&zeroDateTimeBehavior=convertToNull&connectTimeout=500&socketTimeout=5000
 datasource.dream.album.jdbc.username=root
 datasource.dream.album.jdbc.password=Jmcx@Mysql.20161125
 datasource.dream.album.jdbc.maxActive=10
@@ -7,9 +7,9 @@ datasource.dream.album.jdbc.maxWait=120000
 
 #cache
 jmcx.dream.album.redis.cache.ip=127.0.0.1
-jmcx.dream.album.redis.cache.port=6379
+jmcx.dream.album.redis.cache.port=7379
 jmcx.dream.album.redis.cache.ip1=127.0.0.1
-jmcx.dream.album.redis.cache.port1=6379
+jmcx.dream.album.redis.cache.port1=7379
 jmcx.dream.album.redis.cache.max.total=500
 jmcx.dream.album.redis.cache.max.idle=50
 jmcx.dream.album.redis.cache.max.wait=5000
@@ -18,7 +18,7 @@ jmcx.dream.album.redis.cache.timeout=1000
 
 ##db
 jmcx.dream.album.redis.db.ip=127.0.0.1
-jmcx.dream.album.redis.db.port=6379
+jmcx.dream.album.redis.db.port=7379
 jmcx.dream.album.redis.db.max.total=800
 jmcx.dream.album.redis.db.max.idle=80
 jmcx.dream.album.redis.db.max.wait=5000
