--- a/dream-album/src/main/resources/conf/dev/dream_album_db.properties
+++ b/dream-album/src/main/resources/conf/dev/dream_album_db.properties
@@ -1,4 +1,4 @@
-datasource.dream.album.jdbc.url=jdbc:mysql://127.0.0.1:3306/dream_album?characterEncoding=utf-8&autoReconnect=true&maxReconnects=1&initialTimeout=0&failOverReadOnly=false&zeroDateTimeBehavior=convertToNull&connectTimeout=500&socketTimeout=5000
+datasource.dream.album.jdbc.url=jdbc:mysql://127.0.0.1:3306/dream_developer?characterEncoding=utf-8&autoReconnect=true&maxReconnects=1&initialTimeout=0&failOverReadOnly=false&zeroDateTimeBehavior=convertToNull&connectTimeout=500&socketTimeout=5000
 datasource.dream.album.jdbc.username=root
 datasource.dream.album.jdbc.password=Jmcx@Mysql.20161125
 datasource.dream.album.jdbc.maxActive=10
