--- a/dream-family/src/main/resources/conf/product/dream_family_db.properties
+++ b/dream-family/src/main/resources/conf/product/dream_family_db.properties
@@ -1,5 +1,5 @@
 datasource.dream.family.jdbc.url=jdbc:mysql://127.0.0.1:3306/family?characterEncoding=utf-8&autoReconnect=true&maxReconnects=1&initialTimeout=0&failOverReadOnly=false&zeroDateTimeBehavior=convertToNull&connectTimeout=500&socketTimeout=5000
-datasource.dream.family.jdbc.username=luofei
+datasource.dream.family.jdbc.username=root
 datasource.dream.family.jdbc.password=Jmcx@Mysql.20161125
 datasource.dream.family.jdbc.maxActive=10
 datasource.dream.family.jdbc.maxIdle=2
